# todo-rs

./: .gitignore  Cargo.toml
migrations/: 20250908145233_tasks.sql  20250909135350_auto_increment_task_id.sql  20250921133618_add_backlog_field.sql
src/: app.rs  backlog.rs  layout.rs  main.rs  task.rs  view_controller.rs
